<resources>
    <string name="app_name">PlayStation 3 Store</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_genres">Please, select one of the following games:</string>
    <string name="edit_text_search_game">Search game</string>
    <string name="title_activity_game_description">Game description</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_view_assassins_creed_name">Assassin\'s Creed Rogue</string>
    <string name="text_view_batman_name">Batman: Arkham City</string>
    <string name="text_view_battlefield_name">Battlefield 4</string>
    <string name="text_view_call_of_duty_name">Call of Duty: Advanced Warfare</string>
    <string name="text_view_dark_souls_name">Dark Souls II</string>
    <string name="text_view_destiny_name">Destiny</string>
    <string name="text_view_far_cry_name">Far Cry 4</string>
    <string name="text_view_god_of_war_name">God of War III</string>
    <string name="text_view_gta_name">Grand Theft Auto V</string>
    <string name="text_view_middle_earth_name">Middle-earth: Shadow of Mordor</string>
    <string name="text_view_mortal_kombat_name">Mortal Kombat X</string>
    <string name="text_view_street_fighter_name">Street Fighter IV</string>
    <string name="text_view_the_last_of_us_name">The Last of Us</string>
    <string name="text_view_resident_evil_name">Resident Evil 6</string>
    <string name="text_view_uncharted_name">Uncharted 3: Drake\'s Deception</string>
    <string name="text_view_assassins_creed_description">Within the tumult and rage of the French and Indian War, Shay Patrick Cormac, a bold young man and part of the Assassin Brotherhood, undergoes a dark transformation that forever alters the future of the colonies. As Shay, you feel the steady transformation from Assassin to Assassin hunter and utilize your myriad skills to avenge those you once called brothers.</string>
    <string name="text_view_batman_description">Developed by Rocksteady Studios, Batman: Arkham City builds upon the intense, atmospheric foundation of Batman: Arkham Asylum, sending players soaring into Arkham City, the new maximum security "home" for all of Gotham City\'s thugs, gangsters and insane criminal masterminds. Set inside the heavily fortified walls of a sprawling district in the heart of Gotham City, this highly anticipated sequel introduces a brand-new story that draws together a new all-star cast of classic characters and murderous villains from the Batman universe, as well as a vast range of new and enhanced gameplay features to deliver the ultimate experience as the Dark Knight.</string>
    <string name="text_view_battlefield_description">As bullets whiz by, walls crumble, and explosions throw you to the ground, the battlefield feels more alive and interactive than ever before. In Battlefield 3, players step into the role of the elite U.S. Marines where they will experience heart-pounding single player missions and competitive multiplayer actions ranging across diverse locations from around the globe including Europe, Middle-East and North America.</string>
    <string name="text_view_call_of_duty_description">As Call of Duty 4: Modern Warfare\'s single player campaign unfolds, the player is introduced to new gameplay at every turn. Mixed with explosive action, Call of Duty 4 also delivers special effects, including use of depth of field, rim-lighting, character self-shadowing, real time post-processing, texture streaming as well as physics-enabled effects. Infinity Ward deployed a dedicated team from the start to deliver a new level of depth to multiplayer. Call of Duty 4: Modern Warfare\'s new multiplayer provides the community an addictive and accessible experience to gamers of all levels.</string>
    <string name="text_view_dark_souls_description">Prepare to die... Again. Dare yourself to engage against intense gameplay in a vast world powered by a new engine. Immerse yourself into mind-bending environments filled with new twisted monsters and deadly bosses. A vast array of threats will prey on human senses and phobias - auditory hallucinations, vertigo, acrophobia, etc. More intricate customization options provide weapons and armor tailoring to player style</string>
    <string name="text_view_destiny_description">Set in the remote future, Destiny thrusts players into the roles of Guardians of the last city on Earth, who traverse the ancient ruins of our solar system from the red dunes of Mars to the exotic jungles of Venus. Able to wield immense power, players battle humanity’s enemies and must reclaim that which was lost during the collapse of mankind’s Golden Age.  Additionally, Destiny delivers a unique social gaming experience to consoles by offering players a connected, living world that they can explore, combined with vibrant social spaces where they can congregate and celebrate achievements, and share remarkable adventures grouped with friends or solo. </string>
    <string name="text_view_far_cry_description">In Far Cry 4, players find themselves in Kyrat, a breathtaking, perilous and wild region of the Himalayas struggling under the regime of a despotic self-appointed king. Using a vast array of weapons, vehicles and animals, players will write their own story across an exotic open-world landscape.</string>
    <string name="text_view_god_of_war_description"> Set in the realm of brutal Greek mythology, God of War III is a single-player game which allows players to take on the climatic role of the ex-Spartan warrior, Kratos, as he scales through the intimidating heights of Mt. Olympus and the dark depths of Hell to seek revenge on those who have betrayed him. Armed with double-chained blades, and an array of new weapons and magic for this iteration of the trilogy, Kratos must take on mythology’s darkest creatures while solving intricate puzzles throughout his merciless quest to destroy Olympus. </string>
    <string name="text_view_gta_description">Los Santos is a vast, sun-soaked metropolis full of self-help gurus, starlets and once-important, formerly-known-as celebrities. The city was once the envy of the Western world, but is now struggling to stay afloat in an era of economic uncertainty and reality TV. Amidst the chaos, three unique criminals plot their own chances of survival and success: Franklin, a former street gangster in search of real opportunities and serious cheddar; Michael, a professional ex-con whose retirement is a lot less rosy than he hoped it would be; and Trevor, a violent maniac driven by the chance of a cheap high and the next big score. Quickly running out of options, the crew risks it all in a sequence of daring and dangerous heists that could set them up for life.</string>
    <string name="text_view_middle_earth_description">Fight your way through Mordor and reveal the truth of the spirit that compels you, discover the origins of the Rings of Power, build your legend and ultimately confront the evil of Sauron in this new story of Middle-earth.</string>
    <string name="text_view_mortal_kombat_description">Mortal Kombat X combines cinematic presentation with all new gameplay to deliver the most brutal Kombat experience ever, offering a new fully-connected experience that launches players into a persistent online contest where every fight matters in a global battle for supremacy. For the first time, Mortal Kombat X gives players the ability to choose from multiple variations of each character impacting both strategy and fighting style. Players step into an original story showcasing some of the game’s most prolific characters including Scorpion and Sub-Zero, while introducing new challengers that represent the forces of good and evil and tie the tale together.</string>
    <string name="text_view_street_fighter_description">Street Fighter IV features a mix of returning favourites such as Ryu, Ken, Chun-Li and Guile along with new characters created exclusively for this game such as Crimson Viper, Abel, El Fuerte, and Rufus. Characters and environments are rendered in high definition 3D, while the game is played in the classic Street Fighter 2D perspective with additional 3D camera flourishes. Online gameplay features, including instantaneous online challenges, versus mode, tournament mode, and world wide online gameplay. </string>
    <string name="text_view_the_last_of_us_description">Twenty years after a pandemic radically transformed known civilization, infected humans run amuck and survivors kill one another for sustenance and weapons - literally whatever they can get their hands on. Joel, a salty survivor, is hired to smuggle a fourteen-year-old girl, Ellie, out of a rough military quarantine, but what begins as a simple job quickly turns into a brutal journey across the country.</string>
    <string name="text_view_resident_evil_description"> Resident Evil favorites Leon S. Kennedy and Chris Redfield are joined by new characters such as Jake Muller to face a world-wide bioterrorist threat, as the action moves between North America, the war-torn Eastern European state of Edonia and the Chinese city of Lanshiang.</string>
    <string name="text_view_uncharted_description">A search for the fabled "Atlantis of the Sands" propels fortune hunter Nathan Drake on a trek into the heart of the Arabian Desert. When the terrible secrets of this lost city are unearthed, Drake\'s quest descends into a desperate bid for survival that strains the limits of his endurance and forces him to confront his deepest fears.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_button_buy">Buy game</string>
    <string name="text_view_message">To buy this game, first you have to complete your user information in the settings.</string>
    <string name="action_user_information">User information</string>
    <string name="title_activity_user_information">User Information</string>
    <string name="pref_mail_title">Mail</string>
    <string name="pref_user_information">User information</string>
    <string name="pref_name_title">Full name</string>
    <string name="pref_street_address_title">Street Address</string>
    <string name="pref_telephone_title">Phone Number</string>
    <string name="pref_name_summary">Enter your full name</string>
    <string name="pref_mail_summary">Enter your mail</string>
    <string name="pref_street_address_summary">Enter your street address</string>
    <string name="pref_telephone_summary">Enter your phone number</string>
    <string name="title_activity_show_data_confirmation">Summary</string>
    <string name="text_view_assassins_creed_price">$300</string>
    <string name="text_view_batman_price">$350</string>
    <string name="text_view_battlefield_price">$200</string>
    <string name="text_view_call_of_duty_price">$235</string>
    <string name="text_view_dark_souls_price">$300</string>
    <string name="text_view_destiny_price">$335</string>
    <string name="text_view_far_cry_price">$340</string>
    <string name="text_view_god_of_war_price">$255</string>
    <string name="text_view_gta_price">$275</string>
    <string name="text_view_middle_earth_price">$150</string>
    <string name="text_view_mortal_kombat_price">$320</string>
    <string name="text_view_street_fighter_price">$365</string>
    <string name="text_view_the_last_of_us_price">$400</string>
    <string name="text_view_resident_evil_price">$300</string>
    <string name="text_view_uncharted_price">$305</string>
    <string name="text_view_message2">Please, confirm the following information:</string>
    <string name="button_confirm">Confirm</string>
    <string name="text_view_user_information">User information</string>
    <string name="text_view_game_information">Game information</string>
</resources>