<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_user_information">

        <EditTextPreference
            android:key="name_preference"
            android:title="@string/pref_name_title"
            android:summary="@string/pref_name_summary"></EditTextPreference>
        <EditTextPreference
            android:key="username_preference"
            android:title="@string/pref_mail_title"
            android:inputType="textEmailAddress"
            android:summary="@string/pref_mail_summary"></EditTextPreference>
        <EditTextPreference
            android:key="street_address_preference"
            android:title="@string/pref_street_address_title"
            android:summary="@string/pref_street_address_summary"></EditTextPreference>
        <EditTextPreference
            android:key="telephone_preference"
            android:title="@string/pref_telephone_title"
            android:inputType="phone"
        android:summary="@string/pref_telephone_summary"></EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>