<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.micaela.playstationstore.AssassinsCreedGameFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:background="@drawable/darksouls"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_dark_souls_name"
            android:id="@+id/text_view_name_game"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:paddingTop="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_dark_souls_description"
                android:id="@+id/textView2"
                android:paddingLeft="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_button_buy"
                android:id="@+id/button"
                android:background="@drawable/background_button"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text_view_message"
                android:id="@+id/text_view_message"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="5dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
